fixed alignment of the btn and other divs

--- a/scss/components/_base.scss
+++ b/scss/components/_base.scss
@@ -1,7 +1,7 @@
 @import 'components/variables';
 
 body {
-  margin: 20px;
+  margin-top: 10px;
   font-family: 'Open Sans', sans-serif;
   color: $black;
 }
