--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -9,20 +9,22 @@
   }
 
   a.thumbnail.active, a.thumbnail:focus, a.thumbnail:hover, .thumbnail {
-    border-color: $white;
+    border-color: $img-border;
   }
 
   .over-img {
+    border: 1px solid $img-border;
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 0;
+    left: 0;  
     right: 0;
     background: $nav;
     color: $white;
-    margin: 20px;
-    padding-top: 40px;
+    margin: 20px 20px 40px 20px;
+    padding-top: 20px;
     text-align: center;
+    border-radius: 3px;
 
     visibility: hidden;
     opacity: 0;
