--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -3,3 +3,4 @@ $black: rgb(50, 50, 50);
 $nav: rgb(125, 167, 147);
 $white: rgb(255, 255, 255);
 $hover-div: rgb(28, 96, 25);
+$img-border: rgb(154, 154, 154);
